<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_splashscreen"
    tools:context=".view.tatacara.berwudhu.RukunWudhuActivity">

    <LinearLayout
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:padding="6dp">

        <Button
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:background="@drawable/btn_back"
            android:onClick="btn_BackRukunberwudhu" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingBottom="50dp"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_white"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingTop="20dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="30dp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/rukun_wudhu"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/detail_rukunwudhu"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="Shahih Al Bukhari, 52 : 'Diriwayatkan dari Umar Bin Khattab RA, dia berkata bahwa Rasulullah SAW bersabda,'Sesungguhnya segala amal perbuatan itu bergantung pada niat (maksud) nya"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="Sedangkan tentang tertib, seperti yang dijelaskan dalam kitab : l-Fiqh al-Manhaji, Juz 1, Hal.56 : 'Kalangan syafi'iyah ber-hujjah (berdalil) dengan berbagai hadis shahih yang diriwayatkan dari beberapa kelompok sahabat tentang cara Nabi SAW berwudhu. Semua mengatakan bahwa Nabi SAW berwudhu secara berurutan (tertib). Padahal jumlah mereka banyak, tempat mereka melihat Nabi berwudhu berbeda-beda, mereka sering berselisih tentang cara Nabi berwudhu apakah satu, dua ataukah tiga kali dan sebagainya. Akan tetapi tyidak terbukti dengan aneka macam perbedaan itu cara Nabi berwudhu dengan tidak tertib. Pekerjaan Nabi SAW itu merupakan penjelasan bagaimana wudhu yang diperintahkan itu. Andaikata meninggalkan tertib itu diperbolehkan, niscaya Nabi Muhammad SAW akan meninggalkannya pada satu waktu untuk menjelaskan kebolehannya, sebagaimana beliau pernah meninggalkan mengulang-ulang (basuhan dan usapannya) pada waktu-waktu tertentu"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/Enamrukunwudhu"
                        android:textSize="18sp"/>
                </LinearLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>